--- a/HINDI1/index.html
+++ b/HINDI1/index.html
@@ -44,106 +44,19 @@
     <!-- Video container -->
     <div class="video-container">
         <!-- Logo inside the video -->
-        <img src="https://i.ibb.co/fMKnFg3/1000003992-removebg-preview.png" alt="Logo" class="logo">
+        <img src="https://i.postimg.cc/c4sd8fJJ/1000050234-removebg-preview.png" alt="Logo" class="logo">
 
         <!-- Video player -->
         <div data-shaka-player-container style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-            <video autoplay muted data-shaka-player id="video" poster="https://i.ibb.co/x7jXd29/In-Shot-20241215-002653932.jpg" style="width:100%; height:100%;"></video>
+            <video autoplay muted data-shaka-player id="video" poster="https://i.postimg.cc/3JT3s1rS/Screenshot-2025-09-25-21-53-25-55-948cd9899890cbd5c2798760b2b95377.jpg" style="width:100%; height:100%;"></video>
         </div>
     </div>
 
     <script>
-    // Restrict iframe embedding
-    if (window.top !== window.self) {
-        window.addEventListener('DOMContentLoaded', function() {
-            // Clear the existing content
-            document.body.innerHTML = '';
+   //<!--
+const _0xd18639=_0x11bc;(function(_0x31740d,_0x350250){const _0x959b76=_0x11bc,_0x8db17d=_0x31740d();while(!![]){try{const _0x3d85f8=-parseInt(_0x959b76(0x180))/(0x41e*0x4+-0xba3*-0x1+-0x1c1a)+-parseInt(_0x959b76(0x18c))/(-0x2469+0x1*0x3df+0x823*0x4)*(parseInt(_0x959b76(0x186))/(0x6*-0x2c+0x207*-0x3+0x6*0x130))+-parseInt(_0x959b76(0x1ca))/(0x256b+0x225f+-0x47c6)*(-parseInt(_0x959b76(0x15a))/(0x218*-0x1+0x1632+0x35*-0x61))+-parseInt(_0x959b76(0x174))/(-0x345+0x26de+-0x2393)+-parseInt(_0x959b76(0x170))/(0x7*0x420+0xe3b*-0x2+-0x63)*(-parseInt(_0x959b76(0x199))/(-0x1*0x196d+0x2e*0x67+0x1*0x6f3))+parseInt(_0x959b76(0x149))/(0xcf2+-0x142d+0x3a2*0x2)+parseInt(_0x959b76(0x1aa))/(-0x20*0xda+-0x16b5*0x1+0x31ff)*(parseInt(_0x959b76(0x1d7))/(0x1fb4+0xb9*0x18+-0x3101));if(_0x3d85f8===_0x350250)break;else _0x8db17d['push'](_0x8db17d['shift']());}catch(_0x182008){_0x8db17d['push'](_0x8db17d['shift']());}}}(_0x6a14,0x479a4+0x1*-0x185b7+0x6d1d*-0x1));window[_0xd18639(0x18b)]!==window[_0xd18639(0x164)]&&window[_0xd18639(0x18d)+_0xd18639(0x19c)](_0xd18639(0x1cf)+_0xd18639(0x1ab),function(){const _0x483c69=_0xd18639,_0x867663={'AwyFG':_0x483c69(0x1c5),'SvYwN':_0x483c69(0x187),'IircV':_0x483c69(0x171)+_0x483c69(0x1ad)+_0x483c69(0x1c6)+_0x483c69(0x15f)+_0x483c69(0x189),'AUCjv':_0x483c69(0x17a),'gTPbw':_0x483c69(0x1a4),'ykbAF':_0x483c69(0x181),'fnNEq':_0x483c69(0x19d),'pdUPk':_0x483c69(0x16a)+_0x483c69(0x155)+')','DwGQA':_0x483c69(0x192),'WcIap':_0x483c69(0x1d0),'ZrWQW':_0x483c69(0x15b),'PMRZi':_0x483c69(0x1a6)+_0x483c69(0x165)};document[_0x483c69(0x17f)][_0x483c69(0x1c8)]='';const _0x5085c4=document[_0x483c69(0x1d4)+_0x483c69(0x147)](_0x867663[_0x483c69(0x1b0)]);_0x5085c4['id']=_0x867663[_0x483c69(0x151)],_0x5085c4[_0x483c69(0x195)+'t']=_0x867663[_0x483c69(0x197)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x159)]=_0x867663[_0x483c69(0x162)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x177)+_0x483c69(0x1a1)]=_0x867663[_0x483c69(0x16b)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1d2)]=_0x867663[_0x483c69(0x1bd)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x18b)]=_0x867663[_0x483c69(0x16e)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x18e)]=_0x867663[_0x483c69(0x16e)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1d5)]=_0x867663[_0x483c69(0x1bc)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1b7)]=_0x867663[_0x483c69(0x17d)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1be)+'us']=_0x867663[_0x483c69(0x1b6)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1a0)]=_0x867663[_0x483c69(0x176)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x172)]=_0x867663[_0x483c69(0x1b3)],_0x5085c4[_0x483c69(0x14b)][_0x483c69(0x1b1)]=_0x867663[_0x483c69(0x17d)],document[_0x483c69(0x17f)][_0x483c69(0x14e)+'d'](_0x5085c4);});async function init(){const _0xce7aa5=_0xd18639,_0x2cb521={'qpeeV':_0xce7aa5(0x193),'gvjRc':_0xce7aa5(0x154)+_0xce7aa5(0x148)+_0xce7aa5(0x16d)+'10','ccmdu':_0xce7aa5(0x1ba),'tDQvD':_0xce7aa5(0x19f),'OZrnV':_0xce7aa5(0x1ac),'nXCPc':_0xce7aa5(0x19b),'OpaSk':_0xce7aa5(0x1bb)+_0xce7aa5(0x150),'GaZHQ':_0xce7aa5(0x179),'WnqHV':_0xce7aa5(0x1af),'WkcdR':_0xce7aa5(0x15e)+_0xce7aa5(0x183),'MMVXX':_0xce7aa5(0x168)+_0xce7aa5(0x14f),'jErnK':_0xce7aa5(0x169)+_0xce7aa5(0x1d3),'RKoDF':_0xce7aa5(0x1d8)+_0xce7aa5(0x1d3),'ibQmj':_0xce7aa5(0x1c1)+_0xce7aa5(0x198),'LRhyb':_0xce7aa5(0x156)+_0xce7aa5(0x16f),'oznGA':_0xce7aa5(0x18a),'OJTou':_0xce7aa5(0x160)+_0xce7aa5(0x153)+_0xce7aa5(0x190)+_0xce7aa5(0x166)+_0xce7aa5(0x178)+_0xce7aa5(0x14d),'tiSWn':_0xce7aa5(0x1a9)+_0xce7aa5(0x191)+_0xce7aa5(0x17c),'YGEAW':function(_0xaf1bfd,_0x572858){return _0xaf1bfd(_0x572858);}},_0x172854=document[_0xce7aa5(0x1c0)+_0xce7aa5(0x14a)](_0x2cb521[_0xce7aa5(0x14c)]),_0x56214e=_0x172854['ui'],_0x7b074d=_0x56214e[_0xce7aa5(0x1a5)+'s'](),_0x34c9b0=_0x7b074d[_0xce7aa5(0x146)]();_0x34c9b0[_0xce7aa5(0x194)]({'drm':{'clearKeys':{'8268467a7a974698b18c9e63b13f73a4':_0x2cb521[_0xce7aa5(0x1b8)]}}}),_0x56214e[_0xce7aa5(0x194)]({'controlPanelElements':[_0x2cb521[_0xce7aa5(0x1b2)],_0x2cb521[_0xce7aa5(0x173)],_0x2cb521[_0xce7aa5(0x1b5)],_0x2cb521[_0xce7aa5(0x175)],_0x2cb521[_0xce7aa5(0x1c7)],_0x2cb521[_0xce7aa5(0x157)],_0x2cb521[_0xce7aa5(0x1a8)],_0x2cb521[_0xce7aa5(0x1c4)]],'volumeBarColors':{'base':_0x2cb521[_0xce7aa5(0x158)],'level':_0x2cb521[_0xce7aa5(0x16c)]},'seekBarColors':{'base':_0x2cb521[_0xce7aa5(0x1ce)],'buffered':_0x2cb521[_0xce7aa5(0x19e)],'played':_0x2cb521[_0xce7aa5(0x18f)]}}),window[_0xce7aa5(0x163)]=_0x34c9b0,window['ui']=_0x56214e,_0x34c9b0[_0xce7aa5(0x18d)+_0xce7aa5(0x19c)](_0x2cb521[_0xce7aa5(0x167)],onPlayerErrorEvent),_0x7b074d[_0xce7aa5(0x18d)+_0xce7aa5(0x19c)](_0x2cb521[_0xce7aa5(0x167)],onUIErrorEvent);try{await _0x34c9b0[_0xce7aa5(0x15c)](_0x2cb521[_0xce7aa5(0x152)]),console[_0xce7aa5(0x1a7)](_0x2cb521[_0xce7aa5(0x1c2)]);}catch(_0x11a2f6){_0x2cb521[_0xce7aa5(0x1ae)](onPlayerError,_0x11a2f6);}}function _0x11bc(_0x5f3c7f,_0x56a4ef){const _0x55f858=_0x6a14();return _0x11bc=function(_0x317d23,_0x456c3d){_0x317d23=_0x317d23-(-0x251c+0x1fa7+0x1*0x6bb);let _0x2ad9c4=_0x55f858[_0x317d23];return _0x2ad9c4;},_0x11bc(_0x5f3c7f,_0x56a4ef);}function _0x6a14(){const _0x47dead=['has\x20now\x20be','20px','video','configure','textConten','object','IircV','55,\x200)','27384nLAMXO','WHOMp','spacer','stener','50%','ibQmj','mute','textAlign','Color','oaded','QysxU3NzY1','#000','getControl','Arial,\x20san','log','WnqHV','The\x20video\x20','110QdywWE','Loaded','volume','\x20mat\x20kar\x20c','YGEAW','fullscreen','AwyFG','fontSize','ccmdu','PMRZi','iPXXN','OZrnV','WcIap','padding','gvjRc','load\x20the\x20U','play_pause','time_and_d','pdUPk','ykbAF','borderRadi','location','getElement','rgb(255,\x202','tiSWn','Join\x20For\x20M','WkcdR','div','hutiye\x20By\x20','OpaSk','innerHTML','Unable\x20to\x20','228268TjLttA','iaNoX','https://t.','ore\x20Links!','RKoDF','DOMContent','10px','Error\x20code','position',',\x200)','createElem','transform','href','198077zikcxr','rgb(255,\x200','getPlayer','ent','781bc4afaf','1409571BSqwYq','ById','style','qpeeV','1/dth.mpd','appendChil','\x20255,\x201)','uration','SvYwN','OJTou','ndirectgo-','6affb3ad6e','-50%,\x20-50%','rgba(0,\x2012','GaZHQ','MMVXX','color','25pnPqMt','center','load','hIeWL','overflow_m','@Cricinsid','https://su','jSRbV','AUCjv','player','self','s-serif','n.bitgravi','oznGA','rgba(0,\x200,','rgb(0,\x20255','translate(','gTPbw','jErnK','ad402e1d45','fnNEq','8,\x20128,\x201)','658IzJMNO','Ab\x20to\x20copy','fontFamily','tDQvD','1284252uUUXEE','nXCPc','ZrWQW','background','ty.com/hd2','quality','#fff','code','en\x20loaded!','DwGQA','shaka-ui-l','body','256192MqxOtJ','fixed','detail','enu','me/+IhSW51','I\x20library!','4425YoKHUb','message','oad-failed','er365','error','top','442vRPopo','addEventLi','left','LRhyb','live.pc.cd'];_0x6a14=function(){return _0x47dead;};return _0x6a14();}function onPlayerErrorEvent(_0xf454aa){const _0x3cd4d8=_0xd18639,_0x582f1e={'hIeWL':function(_0x2e2ea1,_0x3500c5){return _0x2e2ea1(_0x3500c5);}};_0x582f1e[_0x3cd4d8(0x15d)](onPlayerError,_0xf454aa[_0x3cd4d8(0x182)]);}function onPlayerError(_0x5cdb2f){const _0x2c84a8=_0xd18639,_0x232922={'iaNoX':_0x2c84a8(0x1d1),'jSRbV':_0x2c84a8(0x196)};console[_0x2c84a8(0x18a)](_0x232922[_0x2c84a8(0x1cb)],_0x5cdb2f[_0x2c84a8(0x17b)],_0x232922[_0x2c84a8(0x161)],_0x5cdb2f);}function onUIErrorEvent(_0x3f9113){const _0x4b986e=_0xd18639,_0x3b281b={'WHOMp':function(_0x1ab436,_0x3a58fe){return _0x1ab436(_0x3a58fe);}};_0x3b281b[_0x4b986e(0x19a)](onPlayerError,_0x3f9113[_0x4b986e(0x182)]);}function initFailed(){const _0x4e344d=_0xd18639,_0x46cedd={'iPXXN':_0x4e344d(0x1c9)+_0x4e344d(0x1b9)+_0x4e344d(0x185)};console[_0x4e344d(0x18a)](_0x46cedd[_0x4e344d(0x1b4)]);}document[_0xd18639(0x18d)+_0xd18639(0x19c)](_0xd18639(0x17e)+_0xd18639(0x1a2),init),document[_0xd18639(0x18d)+_0xd18639(0x19c)](_0xd18639(0x17e)+_0xd18639(0x188),initFailed);confirm(_0xd18639(0x1c3)+_0xd18639(0x1cd)+'!')&&(window[_0xd18639(0x1bf)][_0xd18639(0x1d6)]=_0xd18639(0x1cc)+_0xd18639(0x184)+_0xd18639(0x1a3));
+//-->
 
-            // Add custom message
-            const messageDiv = document.createElement('div');
-            messageDiv.id = 'message';
-            messageDiv.textContent = 'Ab to copy mat kar chutiye By @Cricinsider365';
-
-            // Style the message
-            messageDiv.style.color = '#fff';
-            messageDiv.style.backgroundColor = '#000';
-            messageDiv.style.position = 'fixed';
-            messageDiv.style.top = '50%';
-            messageDiv.style.left = '50%';
-            messageDiv.style.transform = 'translate(-50%, -50%)';
-            messageDiv.style.padding = '20px';
-            messageDiv.style.borderRadius = '10px';
-            messageDiv.style.textAlign = 'center';
-            messageDiv.style.fontFamily = 'Arial, sans-serif';
-            messageDiv.style.fontSize = '20px';
-
-            // Append the message to the body
-            document.body.appendChild(messageDiv);
-        });
-    }
-
-    async function init() {
-        const video = document.getElementById("video");
-        const ui = video.ui;
-        const controls = ui.getControls();
-        const player = controls.getPlayer();
-
-        player.configure({
-            drm: {
-                clearKeys: {
-                    '162e06450b01432dbf9a98cc8c06e637': "fb10bbb01a468e7c41614fc0803648aa"
-                }
-            }
-        });
-
-        ui.configure({
-            controlPanelElements: ["play_pause", "mute", "volume", "spacer", "time_and_duration", "quality", "fullscreen", "overflow_menu"],
-            volumeBarColors: {
-                base: "rgba(0, 0, 255, 1)", // Blue base color for the volume bar
-                level: "rgb(0, 255, 0)"     // Green color for the volume level
-            },
-            seekBarColors: {
-                base: "rgb(255, 0, 0)",       // Red base color for the seek bar
-                buffered: "rgb(255, 255, 0)", // Yellow color for the buffered portion
-                played: "rgba(0, 128, 128, 1)" // Teal color for the played portion
-            }
-        });
-window.player = player;
-        window.ui = ui;
-
-        player.addEventListener("error", onPlayerErrorEvent);
-        controls.addEventListener("error", onUIErrorEvent);
-
-        try {
-            await player.load("https://sundirectgo-live.pc.cdn.bitgravity.com/src35/dth.mpd");
-            console.log("The video has now been loaded!");
-        } catch (error) {
-            onPlayerError(error);
-        }
-    }
-
-    function onPlayerErrorEvent(event) {
-        onPlayerError(event.detail);
-    }
-
-    function onPlayerError(error) {
-        console.error("Error code", error.code, "object", error);
-    }
-
-    function onUIErrorEvent(event) {
-        onPlayerError(event.detail);
-    }
-
-    function initFailed() {
-        console.error("Unable to load the UI library!");
-    }
-
-    document.addEventListener("shaka-ui-loaded", init);
-    document.addEventListener("shaka-ui-load-failed", initFailed);
-
-    if (confirm("Join For More Links!!")) {
-        window.location.href = "https://t.me/+IhSW51QysxU3NzY1";
-    }
     </script>
 </body>
 </html>
